homelab-gitops/apps/media/base/sonarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sonarr.thundertest.org
      secretName: mealie-tls
  rules:
    - host: sonarr.thundertest.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 80
